# Uppe.

./: .gitignore  Cargo.toml  PeerUP.code-workspace  README.md  Uppe..code-workspace  default.nix  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  turbo.json
apps/api/server/: Cargo.toml
apps/api/server/src/: error.rs  main.rs
apps/api/server/src/routes/: hello.rs  mod.rs
apps/server/: Cargo.toml  build.rs  package.json
apps/server/src/: error.rs  main.rs
apps/server/src/routes/: health.rs  mod.rs
apps/service/: Cargo.toml  config.production.toml  package.json  rustfmt.toml  test-multi-peer.bat  test-peer1.toml  test-peer2.toml  test-peer3.toml
apps/service/src/: config.rs  location.rs  main.rs  pool.rs  validation.rs
apps/service/src/crypto/: keys.rs  mod.rs  signing.rs  verification.rs
apps/service/src/database/: migrations.rs  mod.rs  models.rs  repository.rs
apps/service/src/models/: mod.rs  model.rs  monitor.rs
apps/service/src/monitoring/: checker.rs  executor.rs  mod.rs  scheduler.rs  types.rs  validation.rs
apps/service/src/orchestrator/: admin_trust.rs  admission.rs  distributed.rs  mod.rs  private.rs  retention.rs  tests.rs
apps/service/src/p2p/: messages.rs  mod.rs  network.rs  receiving.rs  sharing.rs  topics.rs
apps/service/src/peer/: announcer.rs  identity.rs  manager.rs  mod.rs
apps/service/src/tui/: bus.rs  mod.rs  state.rs  types.rs
apps/service/src/tui/events/: edit.rs  keyboard.rs  mod.rs  mouse.rs
apps/service/src/tui/ui/: admin_keys.rs  dht_debug.rs  distributed.rs  footer.rs  header.rs  mod.rs  monitors.rs  network.rs  results.rs  stats.rs
crates/peerup/: Cargo.toml  README.md
crates/peerup/examples/: modular_test.rs  simple_node.rs  two_nodes.rs  two_nodes_mock.rs
crates/peerup/src/: lib.rs
crates/peerup/src/crypto/: encryption.rs  keys.rs  mod.rs  signatures.rs  signing.rs  verification.rs
crates/peerup/src/discovery/: kademlia.rs  mdns.rs  mod.rs
crates/peerup/src/distributed/: consensus.rs  dht.rs  messages.rs  metadata.rs  mod.rs  storage.rs  sync.rs  visibility.rs
crates/peerup/src/handlers/: mod.rs  response.rs  validation.rs
crates/peerup/src/handlers/http/: extract.rs  mod.rs  request.rs  response.rs
crates/peerup/src/network/: behaviour.rs  events.rs  helpers.rs  kad_conv.rs  mdns_conv.rs  mod.rs  relay_conv.rs  request_response_conv.rs  state.rs
crates/peerup/src/network/conversions/: gossipsub.rs  kad.rs  mdns.rs  mod.rs  relay.rs  request_response.rs
crates/peerup/src/node/: actions.rs  config_methods.rs  config_types.rs  crypto.rs  events.rs  getters.rs  init.rs  mod.rs
crates/peerup/src/node/config/: methods.rs  mod.rs  types.rs
crates/peerup/src/node/core/: dht.rs  gossipsub.rs  mod.rs  (+3 more)
crates/peerup/src/protocol/: codec.rs  mod.rs  types.rs
crates/peerup/src/relay/: config.rs  mod.rs  servers.rs
crates/peerup/src/transport/: mod.rs
crates/peerup/src/trust/: mod.rs
crates/peerup/tests/: handlers_tests.rs  integration_tests.rs  protocol_tests.rs
crates/peerup/tests/handlers/: headers_body_tests.rs  http_method_tests.rs  http_tests.rs  mod.rs  response_tests.rs  validation_tests.rs
crates/peerup/tests/node/: advanced_config_tests.rs  basic_config_tests.rs  config_tests.rs  crypto_tests.rs  mod.rs
crates/peerup/tests/protocol/: basic_request_tests.rs  basic_response_tests.rs  mod.rs  peer_message_tests.rs  probe_request_tests.rs  probe_response_tests.rs  request_serialization_tests.rs  response_serialization_tests.rs  url_tests.rs
(+141 files in other folders)
