[package]
name = "service"
authors = [ 
    "veryCrunchy",
    "Jayden Andrews"
]

version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
iroh = "0.90.0"
iroh-gossip = "0.90.0"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.45.1"
toml = "0.8.23"
zmq = "0.10.0"
