[package]
name = "uppe-service"
authors = [ 
    "veryCrunchy",
    "Jayden Andrews"
]

version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
deadpool = "0.12.2"
iroh = "0.90.0"
iroh-gossip = "0.90.0"
libsql = "0.9.18"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
thiserror.workspace = true
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
zmq = "0.10.0"
peerup = { path = "../../crates/peerup" }
uuid = "1.17.0"
