[package]
name = "uppe-service"
authors = [ 
    "veryCrunchy",
    "Jayden Andrews"
]

version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.83"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
crossterm = "0.27"
deadpool = "0.12.2"
ed25519-dalek = "2.1.1"
futures = "0.3"
hex = "0.4.3"
libsql = "0.9.18"
peerup = { path = "../../crates/peerup" }
rand = "0.8"
ratatui = "0.26"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
zmq = "0.10.0"

[dev-dependencies]
tempfile = "3.13"
