[package]
name = "peerup"
version = "0.1.0"
edition = "2021"
description = "Peer-to-peer probe coordination system for Uppe"
license = "MIT"

[dependencies]
libp2p = { version = "0.56", features = ["tokio", "tcp", "dns", "websocket", "quic", "mdns", "gossipsub", "kad", "noise", "identify", "relay", "yamux", "macros", "request-response"] }
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
thiserror = { workspace = true }
log = "0.4"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
tracing-subscriber = "0.3.19"

[[example]]
name = "simple_node"
path = "examples/simple_node.rs"
